// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders with data 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <SubNav
    className="foo"
    menuList={Array []}
    onClick={[Function]}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <Dropdown
        className="w100 mx2"
        label=""
        name=""
        onChange={[Function]}
        options={Array []}
        placeholder="Select menu"
        selectClassName="w100"
        shadow={true}
        value={null}
        variant="secondary"
/>,
      "className": "w100 flex-row justify-center z-sub-nav foo",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "className": "w100 mx2",
        "label": "",
        "name": "",
        "onChange": [Function],
        "options": Array [],
        "placeholder": "Select menu",
        "selectClassName": "w100",
        "shadow": true,
        "value": null,
        "variant": "secondary",
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <Dropdown
          className="w100 mx2"
          label=""
          name=""
          onChange={[Function]}
          options={Array []}
          placeholder="Select menu"
          selectClassName="w100"
          shadow={true}
          value={null}
          variant="secondary"
/>,
        "className": "w100 flex-row justify-center z-sub-nav foo",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "className": "w100 mx2",
          "label": "",
          "name": "",
          "onChange": [Function],
          "options": Array [],
          "placeholder": "Select menu",
          "selectClassName": "w100",
          "shadow": true,
          "value": null,
          "variant": "secondary",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`renders without data 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <SubNav
    className=""
    menuList={
        Array [
            "",
          ]
    }
    onClick={[Function]}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <Dropdown
        className="w100 mx2"
        label=""
        name=""
        onChange={[Function]}
        options={
                Array [
                        Object {
                          "label": "",
                          "value": "",
                        },
                      ]
        }
        placeholder="Select menu"
        selectClassName="w100"
        shadow={true}
        value={null}
        variant="secondary"
/>,
      "className": "w100 flex-row justify-center z-sub-nav",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "className": "w100 mx2",
        "label": "",
        "name": "",
        "onChange": [Function],
        "options": Array [
          Object {
            "label": "",
            "value": "",
          },
        ],
        "placeholder": "Select menu",
        "selectClassName": "w100",
        "shadow": true,
        "value": null,
        "variant": "secondary",
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <Dropdown
          className="w100 mx2"
          label=""
          name=""
          onChange={[Function]}
          options={
                    Array [
                              Object {
                                "label": "",
                                "value": "",
                              },
                            ]
          }
          placeholder="Select menu"
          selectClassName="w100"
          shadow={true}
          value={null}
          variant="secondary"
/>,
        "className": "w100 flex-row justify-center z-sub-nav",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "className": "w100 mx2",
          "label": "",
          "name": "",
          "onChange": [Function],
          "options": Array [
            Object {
              "label": "",
              "value": "",
            },
          ],
          "placeholder": "Select menu",
          "selectClassName": "w100",
          "shadow": true,
          "value": null,
          "variant": "secondary",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
